src/render/snapshots/webgit__render__blame__tests__blame_html_partial.snap
---
source: src/render/blame.rs
expression: "render(props(lines(4), vec![run(0, 2, A, Some(B))], true,))"
---
<div class="blob-info">blob: e69de29bb2d1d6434b8b29ae775ad8c2e48c5391 · <a href="#!/tree/src/lib.rs" class="blob-alt-view">source</a> · <span class="blame-pending">blaming…</span>
</div>
<table class="blame-table">
<tbody>
<tr class="alt">
<td rowspan="2" class="hashes">
<a href="#!/commit/0123abcd0123abcd0123abcd0123abcd0123abcd" title="0123abcd0123abcd0123abcd0123abcd0123abcd" class="oid">0123abcd</a> <a href="#!/blame/src/lib.rs?h=89abcdef89abcdef89abcdef89abcdef89abcdef" title="Blame the previous revision" class="blame-prev">^</a>
</td>
<td class="lno">
<a id="n1" href="#!/blame/src/lib.rs#n1">1</a>
</td>
<td class="code">line 1</td>
</tr>
<tr class="alt">
<td class="lno">
<a id="n2" href="#!/blame/src/lib.rs#n2">2</a>
</td>
<td class="code">line 2</td>
</tr>
<tr>
<td class="hashes">
</td>
<td class="lno">
<a id="n3" href="#!/blame/src/lib.rs#n3">3</a>
</td>
<td class="code">line 3</td>
</tr>
<tr>
<td class="hashes">
</td>
<td class="lno">
<a id="n4" href="#!/blame/src/lib.rs#n4">4</a>
</td>
<td class="code">line 4</td>
</tr>
</tbody>
</table>
