src/render/snapshots/webgit__render__blame__tests__blame_html_too_many_lines.snap
---
source: src/render/blame.rs
expression: "render(props(BlameContent::TooManyLines { lines: 30_000 }, Vec::new(),\nfalse,))"
---
<div class="blob-info">blob: e69de29bb2d1d6434b8b29ae775ad8c2e48c5391 · <a href="#!/tree/src/lib.rs" class="blob-alt-view">source</a>
</div>
<p class="msg">File too large to blame (30000 lines, limit 20000).</p>
